--- a/help-center.html
+++ b/help-center.html
@@ -6,18 +6,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css">
+        <link rel="stylesheet" href="bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css">
+        <link rel="stylesheet" href="fontAwesome/css/all.min.css">
+        <link rel="stylesheet" href="fontAwesome/webfonts/">
     </head>
     <body>
-    <div class="home">
-       <img src="./img/allprime.jpeg">
-
-       <p>Smart for your family</p>
-    </div>
-        
+       
         <script src="" async defer></script>
     </body>
 </html>
