new bootstrap changes

--- a/index.html
+++ b/index.html
@@ -32,9 +32,20 @@
 
     <ul class="list-group list-group-flush p-3">
             
-              <li class="list-group-item">Our email </li>
-              <li class="list-group-item">Terms of use</li>
-              <li class="list-group-item">Privacy policy</li>
+              <li class="list-group-item">Our email
+                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <p class="text-primary float-right">support@alfredinc.com</p>
+              </li>
+
+              <li class="list-group-item">Terms of use
+                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <i class="float-right fas fa-angle-right"></i>
+              </li>
+
+              <li class="list-group-item">Privacy policy
+                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <i class="float-right fas fa-angle-right"></i>
+              </li>
               <li class=" invisible list-group-item">Privacy policy</li>
              
           </ul>
