--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <ul class="list-group list-group-flush p-3">
             
               <li class="list-group-item">Our email
-                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <i class="mr-4 float-left fas fa-envelope"></i>
                 <p class="text-primary float-right">support@alfredinc.com</p>
               </li>
 
               <li class="list-group-item">Terms of use
-                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <i class="mr-4 float-left fas fa-scroll"></i>
                 <i class="float-right fas fa-angle-right"></i>
               </li>
 
               <li class="list-group-item">Privacy policy
-                <i class="mr-4 float-left fas fa-angle-right"></i>
+                <i class="mr-4 float-left fas fa-users"></i>
                 <i class="float-right fas fa-angle-right"></i>
               </li>
               <li class=" invisible list-group-item">Privacy policy</li>
