--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
         </div>
     </div>
 
-    <ul class="list-group list-group-flush p-3">
-            
-              <li class="list-group-item">Our email
-                <i class="mr-4 float-left fas fa-envelope"></i>
-                <p class="text-primary float-right">support@alfredinc.com</p>
-              </li>
+        <ul class="list-group list-group-flush">
+            <li class="border border-left-0 border-right-0 list-group-item"></li>
 
-              <li class="list-group-item">Terms of use
-                <i class="mr-4 float-left fas fa-scroll"></i>
-                <i class="float-right fas fa-angle-right"></i>
-              </li>
+            <li class="list-group-item"> Our email
+            <img class="img-fluid float-left" src="./img/env.png" alt="">
+            <p class="float-right text-primary">support@alfredinc.com</p>
+            </li>
 
-              <li class="list-group-item">Privacy policy
-                <i class="mr-4 float-left fas fa-users"></i>
-                <i class="float-right fas fa-angle-right"></i>
-              </li>
-              <li class=" invisible list-group-item">Privacy policy</li>
-             
-          </ul>
+            <li class="list-group-item"> Terms of use
+             <img class="img-fluid float-left mr-3" src="./img/scr.png" alt="">
+              <i class="float-right fas fa-angle-right"></i>
+            </li>
+
+            <li class="list-group-item"> Privacy policy
+              <img class="img-fluid float-left mr-3" src="./img/privacy-policy.png" alt="">
+              <i class="float-right fas fa-angle-right"></i>
+            </li>
+
+                 </ul>
    
     </body>
 </html>
