--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
 
             <li class="list-group-item"> Our email
-            <img class="img-fluid float-left mr-3" src="./img/env.png" alt="">
+            <img class="img-fluid float-left" src="./img/env.png" alt="">
             <p class="float-right text-primary">support@alfredinc.com</p>
             </li>
 
@@ -47,7 +47,7 @@
               <img class="img-fluid float-left mr-3" src="./img/privacy-policy.png" alt="">
               <i class="float-right fas fa-angle-right"></i>
             </li>
-
+            <li class="border border-left-0 border-right-0 border-bottom-0 list-group-item"></li>
                  </ul>
    
     </body>
